--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -164,6 +164,7 @@
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  SelectionMode="Extended"
                  SelectionChanged="records_SelectionChanged"
+                 controls:ListBoxSelector.Enabled="True"
                  d:IsHidden="True">
             <ListBox.GroupStyle>
                 <GroupStyle>
@@ -204,10 +205,16 @@
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}"
                        BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                    <EventSetter Event="MouseLeftButtonDown"
+                                 Handler="item_MouseLeftButtonDown" />
+                    <Setter Property="Background"
+                            Value="Transparent"/>
+                    
                     <Setter Property="IsSelected"
                             Value="{Binding IsSelected, Mode=TwoWay}" />
                     <Setter Property="controls:Attached.InputBindings"
                             Value="{StaticResource HRInputBindings}" />
+                    
                     <Setter Property="Tag"
                             Value="{Binding DataContext, ElementName=hrList}" />
                     <Setter Property="ContextMenu">
